# ChangeLog for dev-php5/ZendFramework
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php5/ZendFramework/Attic/ChangeLog,v 1.2 2006/03/08 16:28:41 sebastian Exp $

*ZendFramework-0.1.2 (08 Mar 2006)

  08 Mar 2006; Sebastian Bergmann <sebastian@gentoo.org>
  -ZendFramework-0.1.1.ebuild, +ZendFramework-0.1.2.ebuild:
  Version bump.

*ZendFramework-0.1.1 (04 Mar 2006)

  04 Mar 2006; Sebastian Bergmann <sebastian@gentoo.org> +metadata.xml,
  +ZendFramework-0.1.1.ebuild:
  Initial ebuild.
