@@ -1,22 +1,28 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 363900b8678cf1c39e7544476e827cdc ChangeLog 548
-RMD160 972f286a23cdbfa8abfaac19d7e761338a1b8c1d ChangeLog 548
-SHA256 a923d5bd49c912eac1187d2d726628a10b48f97fbbeaae8d5448bea746715428 ChangeLog 548
+MD5 fcd5b7ba2dd0f7f7803a9fe0d30d6a4a ChangeLog 689
+RMD160 ffb4918938763411af0851b8f3073d7149497edc ChangeLog 689
+SHA256 96050120bc4c9d8104403cf244d16f46955654fca492d11109a3de4a09152d68 ChangeLog 689
 MD5 3d59473fe57f08cf42d5b4ba2d7a4795 ZendFramework-0.1.2.ebuild 916
 RMD160 4a40cf6d7daf5ee632d73873424f017f37952bf1 ZendFramework-0.1.2.ebuild 916
 SHA256 aee22b8ee8b7908363a1e3e15405378c230cbcc79869bfbf3d94bc89d051171f ZendFramework-0.1.2.ebuild 916
+MD5 65aed6f9d7c4d3ef86f2a40c166c6e5d ZendFramework-0.1.3.ebuild 932
+RMD160 e7d276ea4acb4683b2e067fc19f232bbd63eadbe ZendFramework-0.1.3.ebuild 932
+SHA256 abd2220c50d91b075dfb271711addca07141b4b5feb8615d921a9171d9ab1496 ZendFramework-0.1.3.ebuild 932
 MD5 bf3e81c093d3aa98844d7c27d2b1616d files/digest-ZendFramework-0.1.2 262
 RMD160 aa2f542afbbd3b682401a197cd9ed5552b31432e files/digest-ZendFramework-0.1.2 262
 SHA256 e531399493a67a4166e8875b4e7759c951de6523747cc1b7fa32b768e2f4ce89 files/digest-ZendFramework-0.1.2 262
+MD5 277b4780e315f7c01a0ea4cad9711de1 files/digest-ZendFramework-0.1.3 262
+RMD160 ddb134483ede0e3f366ec4f75b8113c6ee08b21f files/digest-ZendFramework-0.1.3 262
+SHA256 9ac844b3d400da6d7dc52fe1f25bba77f4cee8e1260ec67172c8d6cabefcbc8b files/digest-ZendFramework-0.1.3 262
 MD5 34b376f52ca199fffb4e52b83169574a metadata.xml 156
 RMD160 a3a59cdc3ac33d711123b2d7e2b1deb2984aa101 metadata.xml 156
 SHA256 f6d70434415ff7294f2a64e7870f32318c5fab9153fe63a58841b12d897da6ba metadata.xml 156
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.2.1 (GNU/Linux)
+Version: GnuPG v1.4.2.2 (GNU/Linux)
 
-iD8DBQFEDwZKaGfFFLhbXWkRAk7hAJ42RQUTZsAEPJ/RCT8Dp/axUiQrSQCeMBcF
-O0ktFV0mcnBvf7ZIQaddDt4=
-=9BBQ
+iD8DBQFERdPLaGfFFLhbXWkRAmCrAKCHBed9l76bChjPnS6I3WJ2rMg6DgCeNlD0
+hOSGRH6WijlRs5uu6LqhIMU=
+=uE7n
 -----END PGP SIGNATURE-----
