@@ -1,0 +1,3 @@
+MD5 3adef29f62bb8f3c536b81e56d65fd86 ZendFramework-0.1.3.tar.gz 1538204
+RMD160 e37b70e4b9b46a6c0a483896e9520888ad93558e ZendFramework-0.1.3.tar.gz 1538204
+SHA256 4f5f4e473f39b68ffdedfba2ac30301ba60edb6b30567497fe3e4fe47e23a73f ZendFramework-0.1.3.tar.gz 1538204
